# ros2-obstacle-avoidance-bot

./: .gitignore  README.md
src/robot/: package.xml  setup.py
src/robot/launch/: sim.launch.py
src/robot/meshes/: base_link.STL  wheel1.STL  wheel2.STL  wheel3.STL  wheel4.STL
src/robot/models/: robot.sdf
src/robot/robot/: obstacle_avoidance.py
src/robot/urdf/: robot.urdf
src/robot/worlds/: obstacle_world.sdf
